-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0, 5.6.0
This comes as a result of the fix for QTBUG-31814, which allows mac apps to specify library dependencies using @rpath. i.e. running otool -L on your newly built Qt app will look something like:
@rpath/QtGui.framework/Versions/5/QtGui (compatibility version 5.5.0, current version 5.5.0)
@rpath/QtCore.framework/Versions/5/QtCore (compatibility version 5.5.0, current version 5.5.0)
Now, macdeployqt only needs to patch the LC_RPATH load command to point to @executable_path/../Frameworks, and the app should work fine.
But when -use-debug-libs is specified, macdeployqt will only copy debug libs (QtCore_debug, etc) to the app bundle, yet the app itself still points to QtCore, and thus the app won't run because it can't find QtCore - only QtCore_debug was copied.
Either -use-debug-libs should copy both debug and release Qt libs, or macdeployqt should continue to use install_name_tool to patch the app with the correct path to the debug Qt libs.
| For Gerrit Dashboard: QTBUG-48800 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 223955,2 | macdeployqt: Correctly handle bundling debug Qt libraries with @rpath | dev | qt/qttools | Status: MERGED | +2 | 0 |